# rich_table

./: .gitignore  README.md  __main__.py  pyproject.toml
rich_table/: __main__.py  cli.py  main.py
rich_table/config/: loader.py
rich_table/notes/: info.txt
